# series-bot

./: LICENSE  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml
.github/workflows/: ruff.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/admin/: login.py  series.py  user.py
backend/app/commands/: command.py  user.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  base.py  notification_settings.py  series.py  user.py
backend/app/db/: base_class.py  session.py
backend/app/exceptions/: __init__.py  auth.py  series.py
backend/app/models/: __init__.py  notification_settings.py  series.py  user.py
backend/app/schemas/: __init__.py  auth.py  base.py  notification_settings.py  pagination.py  series.py  user.py
backend/app/utils/: jwt.py
backend/config/: .env.dev.example  .env.prod.example
backend/migrations/: env.py
backend/migrations/versions/: 0708a52984d7_unique_series_title_user.py  24c28125d3ab_datetime_fields_timezone_false.py  62d95ec567f8_added_cascade_to_series.py  a58f83a86021_init.py
backend/scripts/: shell.sh
config/nginx/: nginx.dev.conf  nginx.prod.conf
config/postgresql/: .env.dev.example  .env.example  .env.prod.example
frontend/: README.md
