[tool.poetry]
name = "series-robot-web-v2"
version = "0.1.0"
description = ""
authors = ["Aykhan-s"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pydantic = {extras = ["email"], version = "^2.4.2"}
pydantic-settings = "^2.0.3"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
ruff = "^0.1.3"
alembic = "^1.12.1"
asyncpg = "^0.28.0"
passlib = "^1.7.4"
psycopg2 = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79
exclude = ["__pycache__"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"app/core/config.py" = ["F821"]
"app/commands/user.py" = ["C901"]
"__init__.py" = ["F401"]